changed body in style.css to have minimum width to prevent distortion when resizing windows; swapped actions section with requests/students section, feels more convenient

--- a/actions_section_style.css
+++ b/actions_section_style.css
@@ -1,3 +1,10 @@
+.actions-section { /* mainly used to style actions section */
+  overflow: auto;
+  background-color: #101010;
+  border: solid;
+  border-color: #800000;
+  margin-top: 10px;
+}
 .actions-section a:link, .actions-section a:visited{
   color: #FFFFFF;
 }
