--- a/student_list_style.css
+++ b/student_list_style.css
@@ -1,3 +1,9 @@
+.main-content {
+  float: right;
+}
+.side-content { /* actions section on left side more convenient */
+  float: left;
+}
 .list-section .student-list {
   margin-bottom: 2%;
 }
